Data imported from file - Split successfully

--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(diabetes.data, diabetes.target, random_state=55)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set score: 0.3355506896161845\n",
+      "Test set score: 0.37969961797249985\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute R^2 for the Lasso model using default parameters\n",
+    "from sklearn.linear_model import Lasso\n",
+    "lasso = Lasso().fit(X_train, y_train)\n",
+    "print(f\"Training set score: {lasso.score(X_train, y_train)}\")\n",
+    "print(f\"Test set score: {lasso.score(X_test, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features used: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# number of feature this model uses\n",
+    "print(f\"Number of features used: {np.sum(lasso.coef_ != 0)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features used: ['age', 'sex', 'bmi', 'bp', 's1', 's2', 's3', 's4', 's5', 's6']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# names of features\n",
+    "print(f\"Features used: {diabetes.feature_names}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading Diabetes from File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Importing data from file \n",
+    "- Each sample is separated by `\t` hence it is set as the `delimiter`\n",
+    "- The header (first row) is skipped as it is not data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes = np.genfromtxt('diabetes.data', delimiter='\t', skip_header=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 59.       2.      32.1    ...   4.8598  87.     151.    ]\n",
+      " [ 48.       1.      21.6    ...   3.8918  69.      75.    ]\n",
+      " [ 72.       2.      30.5    ...   4.6728  85.     141.    ]\n",
+      " ...\n",
+      " [ 60.       2.      24.9    ...   4.1271  95.     132.    ]\n",
+      " [ 36.       1.      30.     ...   5.1299  85.     220.    ]\n",
+      " [ 36.       1.      19.6    ...   4.5951  92.      57.    ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diabetes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Separating features `X` and labels `y`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = diabetes[:, :-1]\n",
+    "y = diabetes[:, -1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Splitting data into training sets and test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=55)"
    ]
   }
  ],
