--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -15,6 +15,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Loading Built-In Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Loading `diabetes` dataset"
    ]
   },
@@ -180,6 +187,83 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=55)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute R^2 for the Lasso model using default parameters\n",
+    "lasso = Lasso().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set score: 0.4990579290275038\n",
+      "Test set score: 0.5300107053694756\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Training set score: {lasso.score(X_train, y_train)}\")\n",
+    "print(f\"Test set score: {lasso.score(X_test, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## StandardScalar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process data using StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit(X_train)\n",
+    "X_test_scaled = scaler.fit(X_test)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set score: -21.557637682219355\n",
+      "Test set score: -20.099274177977286\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Training set score: {lasso.score(X_train_scaled, y_train)}\")\n",
+    "print(f\"Test set score: {lasso.score(X_test_scaled, y_test)}\")"
    ]
   }
  ],
