--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,11 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import svm\n",
-    "from sklearn.svm import SVR\n"
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import learning_curve\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.svm import SVR, SVC\n",
+    "from sklearn.linear_model import Ridge"
    ]
   },
   {
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -534,16 +538,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5be697db50>]"
+       "[<matplotlib.lines.Line2D at 0x7f5be652a450>]"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -559,7 +563,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "plt.xlabel(\"Alpha\")\n",
     "plt.ylabel(\"Number of Features Used\")\n",
     "plt.plot(lasso.coef_, 's', label=\"Lasso alpha=1\")\n",
@@ -569,16 +572,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5be6803790>]"
+       "[<matplotlib.lines.Line2D at 0x7f5be658da90>]"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -603,16 +606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5be685f350>]"
+       "[<matplotlib.lines.Line2D at 0x7f5be6416d50>]"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,16 +640,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5be68d1190>]"
+       "[<matplotlib.lines.Line2D at 0x7f5be6490a50>]"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -671,16 +674,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5be688f9d0>"
+       "<matplotlib.legend.Legend at 0x7f5be65879d0>"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -696,8 +699,6 @@
     }
    ],
    "source": [
-    "# plot learning curve for Lasso with alpha=0.01, 0.1, 1, 10\n",
-    "from sklearn.model_selection import learning_curve\n",
     "train_sizes, train_scores, test_scores = learning_curve(Lasso(alpha=0.01, max_iter=100000), X_train_scaled, y_train, train_sizes=np.linspace(0.1, 1.0, 5), cv=5)\n",
     "train_scores_mean = np.mean(train_scores, axis=1)\n",
     "train_scores_std = np.std(train_scores, axis=1)\n",
@@ -707,21 +708,21 @@
     "plt.plot(train_sizes, test_scores_mean, 'o-', color=\"g\", label=\"Cross-validation score\")\n",
     "plt.ylabel(\"Score\")\n",
     "plt.xlabel(\"Training examples\")\n",
-    "plt.legend(loc=\"best\")\n"
+    "plt.legend(loc=\"best\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5be6798610>"
+       "<matplotlib.legend.Legend at 0x7f5be6330610>"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -751,16 +752,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5be67b8390>"
+       "<matplotlib.legend.Legend at 0x7f5be638f9d0>"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 414,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -792,6 +793,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Regression Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Question 10**"
    ]
   },
@@ -804,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -928,8 +936,6 @@
     }
    ],
    "source": [
-    "from sklearn.svm import SVR, SVC\n",
-    "\n",
     "best_score: float = 0\n",
     "for gamma in [0.001, 0.01, 0.1, 1, 10, 100]: # try different values for gamma\n",
     "\tfor C in [0.001, 0.01, 0.1, 1, 10, 100]: # try different values for C\n",
@@ -955,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -968,8 +974,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import Ridge\n",
-    "\n",
     "best_score: float = 0\n",
     "for alpha in [0.001, 0.01, 0.1, 1, 10, 100]: # try different values for alpha\n",
     "\tridge: Ridge = Ridge(alpha=alpha) # build the model\n",
@@ -1006,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1019,7 @@
        "Text(0, 0.5, 'Accuracy')"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1063,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
