Added number of features used

--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,8 @@
      "output_type": "stream",
      "text": [
       "Training set score: 0.5605745648309347\n",
-      "Test set score: 0.4402521028312093\n"
+      "Test set score: 0.4402521028312093\n",
+      "Number of support vectors: 331\n"
      ]
     }
    ],
@@ -911,7 +912,8 @@
     "\n",
     "svr = SVR(**best_parameters).fit(X_train_scaled, y_train)\n",
     "print(f\"Training set score: {svr.score(X_train_scaled, y_train)}\")\n",
-    "print(f\"Test set score: {svr.score(X_test_scaled, y_test)}\")"
+    "print(f\"Test set score: {svr.score(X_test_scaled, y_test)}\")\n",
+    "print(f\"Number of support vectors: {svr.support_vectors_.shape[0]}\")"
    ]
   },
   {
@@ -961,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +971,8 @@
      "output_type": "stream",
      "text": [
       "Training set score: 0.5394260840483416\n",
-      "Test set score: 0.4355826857407178\n"
+      "Test set score: 0.4355826857407178\n",
+      "Number of features used: 10\n"
      ]
     }
    ],
@@ -985,8 +988,10 @@
     "\n",
     "ridge: Ridge = Ridge(**best_parameters) # build the model with the best parameters\n",
     "ridge.fit(X_train, y_train) # train the model\n",
+    "\n",
     "print(f\"Training set score: {ridge.score(X_train, y_train)}\") # evaluate the model on the training set\n",
-    "print(f\"Test set score: {ridge.score(X_test, y_test)}\") # evaluate the model on the test set"
+    "print(f\"Test set score: {ridge.score(X_test, y_test)}\") # evaluate the model on the test set\n",
+    "print(f\"Number of features used: {np.sum(ridge.coef_ != 0)}\") # count the number of features used"
    ]
   },
   {
