Calculate distance between points

--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -74,6 +74,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 453,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(331, 10)\n",
+      "(111, 10)\n",
+      "(331,)\n",
+      "(111,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(X_test.shape)\n",
+    "print(y_train.shape)\n",
+    "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 446,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 47.       1.      28.6     97.     164.      90.6     56.       3.\n",
+      "   4.4659  88.    ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print a sample\n",
+    "print(X_train[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1113,7 +1155,7 @@
     "plt.plot([0.0001, 0.001, 0.01, 0.1, 1, 10, 100], [ridge.score(X_test, y_test)] * 7, label='Ridge')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.xlabel('Alpha')\n",
-    "plt.xscale('log')\n",
+    "plt.xscale('log') # use a logarithmic scale for the x-axis\n",
     "plt.legend()"
    ]
   },
@@ -1154,7 +1196,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Conformal Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Question 11**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting Data into Training Set Proper & Validation Sets"
    ]
   },
   {
@@ -1206,12 +1262,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Normalize Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Part B*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1282,8 @@
     "\n",
     "X_train_pr_scaled: np.ndarray = scalar.fit(X_train_pr)\n",
     "X_train_pr_scaled: np.ndarray = scalar.transform(X_train_pr)\n",
-    "X_val_scaled: np.ndarray = scalar.transform(X_val)\n",
+    "\n",
+    "X_val_scaled: np.ndarray = scalar.fit(X_val)\n",
     "X_val_scaled: np.ndarray = scalar.transform(X_val)"
    ]
   },
@@ -1232,12 +1296,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using the nonconformity measure α = |y − ŷ|, where y is the true label and ŷ is its prediction given the training set proper, for each test sample compute the prediction interval for it. Do this for significance levels 5% and 20%.\n",
-    "\n"
+    "table: tuple[np.ndarray, np.ndarray, float] = ([], [], 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computing Distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Function computes the distance between 2 points \n",
+    "  - One point will be used from the training set and the other from the testing set\n",
+    "  - The last column is excluded as it is a label where the first few rows are features\n",
+    "  - $(sample.x, label.y)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 461,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute distance between 2 points in the validation set and test set\n",
+    "def distance(x1: np.ndarray, x2: np.ndarray) -> float:\n",
+    "\t\"\"\"Computes the distance between 2 points using the Euclidean distance formula.\n",
+    "\n",
+    "\tArgs:\n",
+    "\t\tx1 (np.ndarray): distance from point 1\n",
+    "\t\tx2 (np.ndarray): distance to point 2\n",
+    "\n",
+    "\tReturns:\n",
+    "\t\tfloat: distance between 2 points\n",
+    "\t\"\"\"\n",
+    "\treturn np.sqrt(np.sum((x1 - x2) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.37794705193643\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(distance(X_train_pr_scaled[0], X_val_scaled[1]))"
    ]
   }
  ],
