--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -582,16 +582,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5213229c10>]"
+       "[<matplotlib.lines.Line2D at 0x7f6020b97d50>]"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -616,16 +616,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f52132a6910>]"
+       "[<matplotlib.lines.Line2D at 0x7f60209e0b90>]"
       ]
      },
-     "execution_count": 489,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -650,16 +650,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f52132ef9d0>]"
+       "[<matplotlib.lines.Line2D at 0x7f6024cc2650>]"
       ]
      },
-     "execution_count": 490,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -684,16 +684,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f52132f2c90>]"
+       "[<matplotlib.lines.Line2D at 0x7f6020a84c90>]"
       ]
      },
-     "execution_count": 491,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -718,16 +718,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f52131ce590>"
+       "<matplotlib.legend.Legend at 0x7f6020a8b050>"
       ]
      },
-     "execution_count": 492,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -757,16 +757,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5213041810>"
+       "<matplotlib.legend.Legend at 0x7f6024e06710>"
       ]
      },
-     "execution_count": 493,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -796,16 +796,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f52130ca2d0>"
+       "<matplotlib.legend.Legend at 0x7f602096e7d0>"
       ]
      },
-     "execution_count": 494,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "Text(0.5, 0, 'Model')"
       ]
      },
-     "execution_count": 499,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
        "Text(0.5, 0, 'Model')"
       ]
      },
-     "execution_count": 500,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1123,16 +1123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5212e02b90>"
+       "<matplotlib.legend.Legend at 0x7f602074ba90>"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
        "Text(0.5, 0, 'Model')"
       ]
      },
-     "execution_count": 502,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1383,27 +1383,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c: float = 0.05 # set the regularization parameter\n",
-    "best_score_conformal: float = np.NINF # initialize the best score (negative infinity)\n",
+    "def cross_validation_optimal_alpha(): \n",
+    "\tc: float = 0.05 # set the regularization parameter\n",
+    "\tbest_score_conformal: float = np.NINF # initialize the best score (negative infinity)\n",
     "\n",
-    "while c <= 5: # try different values for c\n",
-    "\tlasso_model_check: Lasso = Lasso(alpha=c).fit(X_train_pr_scaled, y_train_pr) # build the model\n",
-    "\tscores_conformal: float = np.mean(cross_val_score(lasso_model_check, X_train_pr_scaled, y_train_pr, cv=5)) # compute the mean score\n",
-    "\tc += 0.05 # increase c\n",
-    "\tif scores_conformal > best_score_conformal: # if we got a better score, store the score and parameters\n",
-    "\t\talpha_optimal_conformal: float = c # store the best alpha\n",
-    "\t\tbest_score_conformal = scores_conformal # store the best score\n",
+    "\twhile c <= 5: # try different values for c\n",
+    "\t\tlasso_model_check: Lasso = Lasso(alpha=c).fit(X_train_pr_scaled, y_train_pr) # build the model\n",
+    "\t\tscores_conformal: float = np.mean(cross_val_score(lasso_model_check, X_train_pr_scaled, y_train_pr, cv=5)) # compute the mean score\n",
+    "\t\tc += 0.05 # increase c\n",
+    "\t\tif scores_conformal > best_score_conformal: # if we got a better score, store the score and parameters\n",
+    "\t\t\talpha_optimal_conformal: float = c # store the best alpha\n",
+    "\t\t\tbest_score_conformal = scores_conformal # store the best score\n",
+    "\treturn alpha_optimal_conformal, best_score_conformal, c\n",
     "\n",
+    "\n",
+    "alpha_optimal_conformal, best_score_conformal, c = cross_validation_optimal_alpha()\n",
     "lasso_model = Lasso(alpha=alpha_optimal_conformal).fit(X_train_pr_scaled, y_train_pr) # build the model with the best parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1411,14 +1415,15 @@
      "output_type": "stream",
      "text": [
       "Optimal alpha: 0.1\n",
-      "Best score: 0.5139464064158494\n"
+      "Best score: 0.5139464064158494\n",
+      "Training set score: 0.5655369045313905\n"
      ]
     }
    ],
    "source": [
     "print(f\"Optimal alpha: {alpha_optimal_conformal}\")\n",
     "print(f\"Best score: {best_score_conformal}\")\n",
-    "print(f\"Training set score: {lasso_model.score(X_train_pr_scaled, y_train_pr)}\") # evaluate the model on the training set\n"
+    "print(f\"Training set score: {lasso_model.score(X_train_pr_scaled, y_train_pr)}\") # evaluate the model on the training set"
    ]
   },
   {
@@ -1430,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1472,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1485,7 @@
      "output_type": "stream",
      "text": [
       "Error Rate: 0.10810810810810811\n",
-      "Amplitude (Length of Interval): 156.43339069133836\n"
+      "Amplitude (Length of Interval): 10.09999999999997\n"
      ]
     }
    ],
@@ -1492,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
